gobmkida/g0/stones_on_board
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3130:6: error: use of undeclared identifier 'stone_count_for_position_2'
if ( stone_count_for_position_2 != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3132:1: error: use of undeclared identifier 'white_stones_1'
white_stones_1 = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3133:1: error: use of undeclared identifier 'black_stones_0'
black_stones_0 = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3138:3: error: use of undeclared identifier 'white_stones_1'
++white_stones_1; 
  ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3142:3: error: use of undeclared identifier 'black_stones_0'
++black_stones_0; 
  ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3145:1: error: use of undeclared identifier 'stone_count_for_position_2'
stone_count_for_position_2 = position_number; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3148:6: error: use of undeclared identifier 'black_stones_0'
v1 = black_stones_0; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/engine/board.c:3152:6: error: use of undeclared identifier 'white_stones_1'
v2 = white_stones_1; 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/stones_on_board/src/obj/1/board.o] Error 1
